@@ -1,2 +1,9 @@
 # Doodle-App
 A simple JavaFX program to draw stuff
+
+To run the program...
+1. If JavaFX is not downloaded, download file from [link] (https://gluonhq.com/products/javafx/ "here.")
+    * Make sure to download the SDK and not the jmod.
+2. Extract the zip file contents into the same directory as the DoodleApp.java
+3. Compile with this command `javac --module-path javafx-sdk-11.0.2/lib --add-modules=javafx.controls DoodleApp.java`
+4. Run the progam with this command `java --module-path javafx-sdk-11.0.2/lib --add-modules=javafx.controls DoodleApp`
